ejercicio SVM terminado - revisar las explicaciones

--- a/TPs/TP4/TP4.ipynb
+++ b/TPs/TP4/TP4.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "59197a96",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
     "        \n",
     "\n",
     "    # #Testeo hard\n",
-    "    # def predict (self, X):\n",
+    "    def predict (self, X):\n",
     "    \n",
     "    # #Testeo soft\n",
     "    # def predict_prob (self, X):\n",
