--- a/TPs/TP3/TP3.ipynb
+++ b/TPs/TP3/TP3.ipynb
@@ -424,7 +424,7 @@
     "\n",
     "finalmente, la derivada es:\n",
     "\n",
-    "$\\sigma'(p) = p-p^2$"
+    "$\\sigma'(p) = p(1-p)$"
    ]
   },
   {
@@ -460,9 +460,38 @@
     "\n",
     "$l(x,y) = -(1-y) log(1-\\sigma (\\omega^T x +b)) - y log(\\sigma (\\omega^T x +b))$\n",
     "\n",
-    "luego, el gradiente de la misma, respecto a las variables $b$ y $\\omega$ vale:\n",
+    "Para obtener el gradiente de la misma, es necesario calcular las derivadas parciales respecto a $\\omega$ y $b$\n",
+    "\n",
+    "comenzando por la derivada parcial respecto a $\\omega$\n",
+    "\n",
+    "$\\Rightarrow$ $ \\frac{\\partial}{\\partial \\omega } l(x,y) = \\frac{\\partial}{\\partial \\omega } ((y-1) log(1-\\sigma (\\omega^T x +b)) - y log(\\sigma (\\omega^T x +b))) $\n",
+    "\n",
+    "$ \\frac{\\partial}{\\partial \\omega } l(x,y) =  (y-1) \\frac{-\\sigma' x}{1-\\sigma} - y \\frac{\\sigma' x }{\\sigma}$\n",
+    "\n",
+    "$ \\frac{\\partial}{\\partial \\omega } l(x,y) = \\frac{-y \\sigma' x}{1 - \\sigma} + \\frac {\\sigma'x}{1-\\sigma} - \\frac{y \\sigma' x}{\\sigma} $\n",
+    "\n",
+    "$ \\frac{\\partial}{\\partial \\omega } l(x,y) = \\sigma'x(-y \\frac{1}{\\sigma(1-\\sigma)} + \\frac{\\sigma}{\\sigma(1-\\sigma)}) $\n",
+    "\n",
+    "$ \\frac{\\partial}{\\partial \\omega } l(x,y) = \\sigma'x \\frac{(-y+\\sigma)}{\\sigma (1-\\sigma)}$\n",
+    "\n",
+    "por lo que finalmente, dado que $\\sigma' = \\sigma (1-\\sigma)$:\n",
     "\n",
     "$\\frac{\\partial}{\\partial \\omega } l(x,y) = x (\\sigma (\\omega^T x +b) - y) $\n",
+    "\n",
+    "\n",
+    "de manera análoga, la derivada parcial respecto a $b$ se obtiene de la sigueinte manera:\n",
+    "\n",
+    "$\\frac{\\partial}{\\partial b } l(x,y) = \\frac{-(y-1)\\sigma'}{1-\\sigma} + \\frac{-y\\sigma'}{\\sigma} $\n",
+    "\n",
+    "$\\frac{\\partial}{\\partial b } l(x,y) = \\frac{(1-y)\\sigma'\\sigma}{\\sigma(1-\\sigma)} - \\frac{y\\sigma'(1-\\sigma)}{\\sigma(1-\\sigma)} $\n",
+    "\n",
+    "$\\frac{\\partial}{\\partial b } l(x,y) = \\frac{\\sigma'\\sigma - y\\sigma'\\sigma-y\\sigma'+\\sigma\\sigma'y}{\\sigma'} $\n",
+    "\n",
+    "$\\frac{\\partial}{\\partial b } l(x,y) = \\frac{\\sigma' (\\sigma - y)}{\\sigma'} $\n",
+    "\n",
+    "$\\frac{\\partial}{\\partial b } l(x,y) = \\sigma - y $\n",
+    "\n",
+    "Por lo que finalmente:\n",
     "\n",
     "$\\frac{\\partial}{\\partial b } l(x,y) = \\sigma (\\omega^T x +b) - y $\n",
     "\n"
@@ -485,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
