--- a/TPs/TP2/TP2.ipynb
+++ b/TPs/TP2/TP2.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "id": "ae0d22b8",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "id": "36fba6b5",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "id": "1144d885",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "id": "c28f82a4",
    "metadata": {},
    "outputs": [],
@@ -149,15 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "id": "7f7fbe2b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[array(['CNG', 'Diesel', 'Petrol'], dtype=object)]\n"
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      8\u001b[39m seller_train = encoder_seller.fit_transform(train[[\u001b[33m'\u001b[39m\u001b[33mSeller_Type\u001b[39m\u001b[33m'\u001b[39m]])\n\u001b[32m      9\u001b[39m fuel_train = encoder_fuel.fit_transform(train[[\u001b[33m'\u001b[39m\u001b[33mFuel_Type\u001b[39m\u001b[33m'\u001b[39m]])\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mfuel_train\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m)\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#Se repite el mismo procedimiento para los datos de validación y testeo\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# ------ Validación\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m#Se aplica solo transform, ya que el modelo no debe tener información desconocida en el training\u001b[39;00m\n\u001b[32m     17\u001b[39m transmission_val = encoder_transmission.transform(validation[[\u001b[33m'\u001b[39m\u001b[33mTransmission\u001b[39m\u001b[33m'\u001b[39m]])\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'columns'"
      ]
     }
    ],
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "id": "6ced8893",
    "metadata": {},
    "outputs": [],
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "id": "a814c132",
    "metadata": {},
    "outputs": [],
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "id": "3a731331",
    "metadata": {},
    "outputs": [
@@ -1288,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "af5994da",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": null,
    "id": "d3f12d3d",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "id": "e06b4514",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "68445fed",
    "metadata": {},
    "outputs": [
