Correcciones en SVM

--- a/TPs/Obligatorio/ej_obligatorio.ipynb
+++ b/TPs/Obligatorio/ej_obligatorio.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "37714f9a",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3a353020",
    "metadata": {},
    "outputs": [
@@ -98,12 +98,12 @@
    "id": "3f048da4",
    "metadata": {},
    "source": [
-    "### Se repiten los gráficos previos para distintos valores de C"
+    "## Se repiten los gráficos previos para distintos valores de C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "30695b2f",
    "metadata": {},
    "outputs": [
@@ -164,12 +164,12 @@
    "id": "37419322",
    "metadata": {},
    "source": [
-    "### Se repiten los gráficos para distintos valores de Gamma"
+    "## Se repiten los gráficos para distintos valores de $\\gamma$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "0eb7332b",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
    "id": "2c4db8c6",
    "metadata": {},
    "source": [
-    "En este caso, al aumentar gamma las curvas de los vectores de soporte se acercan más a los datos, provocando que haya un menor margen de error. De esta manera hay mayor overfitting para valores de gamma muy grandes, es decir, el modelo es más sensible a variaciones pequeñas de los datos. Es menos general."
+    "En este caso, al aumentar $\\gamma$ las curvas de los vectores de soporte se acercan más a los datos, provocando que haya un menor margen de error. De esta manera hay mayor overfitting para valores de gamma muy grandes, es decir, el modelo es más sensible a variaciones pequeñas de los datos. Es menos general."
    ]
   }
  ],
