--- a/TPs/TP5/TP5_Sarmiento_Jorge_104241.ipynb
+++ b/TPs/TP5/TP5_Sarmiento_Jorge_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "b401309d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "6133a65b",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "a5a32232",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "734024b2",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "01ce3f9f",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "2575b9fc",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "83ed6cd5",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "94608bdb",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "c8d00810",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "8a5c5720",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
    ],
    "source": [
     "#Se crea el clasificador con 20 arboles\n",
-    "forest = RandomForestClassifier(n_estimators=5*4, criterion='entropy',random_state=509)\n",
+    "forest = RandomForestClassifier(n_estimators=20, criterion='entropy',random_state=509)\n",
     "\n",
     "#Se entrena el modelo\n",
     "forest.fit(x_train, y_train.to_numpy().ravel()) #Se aplana para evitar el warning\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "3646a77b",
    "metadata": {},
    "outputs": [
@@ -663,8 +663,8 @@
      "output_type": "stream",
      "text": [
       "Features más importantes en el bosque:                                  Feature  Importance\n",
-      "16  Curricular units 2nd sem (approved)    0.324415\n",
-      "5                       Admission grade    0.054253\n"
+      "16  Curricular units 2nd sem (approved)    0.143915\n",
+      "10  Curricular units 1st sem (approved)    0.092408\n"
      ]
     }
    ],
