--- a/TPs/TP6/TP6_Sarmiento_104241.ipynb
+++ b/TPs/TP6/TP6_Sarmiento_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 29,
    "id": "fe2542d5",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 30,
    "id": "23ad0bb4",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
     "    # print('shapes de x:',x.shape)\n",
     "    # print('shapes de y', y.shape)\n",
     "\n",
-    "    x = np.vstack(x) #Se apilan las matrices de la stft de cada audio\n",
+    "    x = np.vstack(x) #Se apilan las matrices de la stft de cada audio (axis = 0)\n",
     "    y = np.concatenate(y,axis = 0) #Se concatenan las filas de las etiquetas de los frames\n",
     "\n",
     "    # print('shapes de x apilados verticalmente:',x.shape)\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 31,
    "id": "c3235120",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 32,
    "id": "59a15c83",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 33,
    "id": "caa3c66f",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 34,
    "id": "4ea3d346",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 35,
    "id": "ce03f11d",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 36,
    "id": "70e86e12",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 37,
    "id": "4d642a01",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 38,
    "id": "f4e6dbe0",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 39,
    "id": "ebdfd97b",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 40,
    "id": "c52e8533",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 41,
    "id": "13b3ba19",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 42,
    "id": "ca79378d",
    "metadata": {},
    "outputs": [],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 43,
    "id": "c492207a",
    "metadata": {},
    "outputs": [
@@ -884,8 +884,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6586687306501547\n",
-      "Accuracy de validación: 0.6435185185185185\n"
+      "Accuracy de testeo: 0.6172600619195047\n",
+      "Accuracy de validación: 0.5740740740740741\n"
      ]
     }
    ],
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 44,
    "id": "049d24ec",
    "metadata": {},
    "outputs": [
@@ -941,8 +941,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6664086687306502\n",
-      "Accuracy de validación: 0.6504629629629629\n"
+      "Accuracy de testeo: 0.6671826625386997\n",
+      "Accuracy de validación: 0.6527777777777778\n"
      ]
     }
    ],
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 45,
    "id": "92f0d243",
    "metadata": {},
    "outputs": [
@@ -984,8 +984,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.7623839009287926\n",
-      "Accuracy de validación: 0.7337962962962963\n"
+      "Accuracy de testeo: 0.7573529411764706\n",
+      "Accuracy de validación: 0.7199074074074074\n"
      ]
     }
    ],
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 46,
    "id": "0665fafa",
    "metadata": {},
    "outputs": [
@@ -1028,8 +1028,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6482198142414861\n",
-      "Accuracy de validación: 0.6412037037037037\n"
+      "Accuracy de testeo: 0.646671826625387\n",
+      "Accuracy de validación: 0.6435185185185185\n"
      ]
     }
    ],
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 47,
    "id": "b442182d",
    "metadata": {},
    "outputs": [
@@ -1072,8 +1072,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.5236068111455109\n",
-      "Accuracy de validación: 0.5231481481481481\n"
+      "Accuracy de testeo: 0.5154798761609907\n",
+      "Accuracy de validación: 0.5185185185185185\n"
      ]
     }
    ],
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 48,
    "id": "1edde50b",
    "metadata": {},
    "outputs": [
