--- a/TPs/TP6/TP6_Sarmiento_104241.ipynb
+++ b/TPs/TP6/TP6_Sarmiento_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 527,
    "id": "fe2542d5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Regresion Logistica\n",
-    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "# LDA y QDA\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 528,
    "id": "23ad0bb4",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 529,
    "id": "c3235120",
    "metadata": {},
    "outputs": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 530,
    "id": "59a15c83",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 531,
    "id": "caa3c66f",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 532,
    "id": "4ea3d346",
    "metadata": {},
    "outputs": [],
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 533,
    "id": "ce03f11d",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 534,
    "id": "70e86e12",
    "metadata": {},
    "outputs": [
@@ -530,8 +530,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6087461300309598\n",
-      "Accuracy de validación: 0.5694444444444444\n"
+      "Accuracy de testeo: 0.6780185758513931\n",
+      "Accuracy de validación: 0.625\n"
      ]
     }
    ],
@@ -539,12 +539,13 @@
     "#Se define el modelo: Stochastic Gradient Descent\n",
     "#Dicho modelo es mejor cuando hay muchas features, como en este caso, donde hay muchos frames\n",
     "#Se decide utilizar la log-loss como función de costos\n",
-    "log_reg = SGDClassifier(\n",
-    "        loss='log_loss',               #Se utiliza la log-loss como función de costos\n",
-    "        learning_rate='optimal',  #Learning rate óptimo\n",
-    "        max_iter=1000,\n",
-    "        random_state=509\n",
-    "    )\n",
+    "log_reg = LogisticRegression(\n",
+    "    penalty='l2',\n",
+    "    C=0.5, #Se controla la \"fuerza\" de regularización\n",
+    "    solver='lbfgs',\n",
+    "    max_iter=1000,\n",
+    "    random_state=509\n",
+    ")\n",
     "\n",
     "#Se entrena el modelo\n",
     "log_reg.fit(x_train_scaled,y_train) #Datos escalados\n",
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 535,
    "id": "4d642a01",
    "metadata": {},
    "outputs": [
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 536,
    "id": "f4e6dbe0",
    "metadata": {},
    "outputs": [
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 537,
    "id": "ebdfd97b",
    "metadata": {},
    "outputs": [
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 538,
    "id": "c52e8533",
    "metadata": {},
    "outputs": [
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 539,
    "id": "13b3ba19",
    "metadata": {},
    "outputs": [
@@ -851,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 540,
    "id": "ca79378d",
    "metadata": {},
    "outputs": [],
@@ -876,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 541,
    "id": "c492207a",
    "metadata": {},
    "outputs": [
@@ -884,8 +885,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6172600619195047\n",
-      "Accuracy de validación: 0.5740740740740741\n"
+      "Accuracy de testeo: 0.7128482972136223\n",
+      "Accuracy de validación: 0.6689814814814815\n"
      ]
     }
    ],
@@ -893,12 +894,13 @@
     "#Se define el modelo: Stochastic Gradient Descent\n",
     "#Dicho modelo es mejor cuando hay muchas features, como en este caso, donde hay muchos frames\n",
     "#Se decide utilizar la log-loss como función de costos\n",
-    "log_reg = SGDClassifier(\n",
-    "        loss='log_loss',               #Se utiliza la log-loss como función de costos\n",
-    "        learning_rate='optimal',  #Learning rate óptimo\n",
-    "        max_iter=1000,\n",
-    "        random_state=509\n",
-    "    )\n",
+    "log_reg = LogisticRegression(\n",
+    "    penalty='l2',\n",
+    "    C=1,\n",
+    "    solver='lbfgs',\n",
+    "    max_iter=1000,\n",
+    "    random_state=509\n",
+    ")\n",
     "\n",
     "#Se entrena el modelo\n",
     "log_reg.fit(x_train_pca,y_train) #Datos escalados\n",
@@ -933,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 542,
    "id": "049d24ec",
    "metadata": {},
    "outputs": [
@@ -941,7 +943,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.6671826625386997\n",
+      "Accuracy de testeo: 0.6664086687306502\n",
       "Accuracy de validación: 0.6527777777777778\n"
      ]
     }
@@ -976,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 543,
    "id": "92f0d243",
    "metadata": {},
    "outputs": [
@@ -984,8 +986,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.7573529411764706\n",
-      "Accuracy de validación: 0.7199074074074074\n"
+      "Accuracy de testeo: 0.7619969040247678\n",
+      "Accuracy de validación: 0.7314814814814815\n"
      ]
     }
    ],
@@ -993,7 +995,7 @@
     "#Se define el modelo QDA.\n",
     "#Se selecciona reg_param para maximizar el accuracy de validación.\n",
     "#reg_param regulariza la covarianza de cada clase. Se utiliza ya que las covarianzas están mal condicionadas (se indica mediante un warning)\n",
-    "qda = QDA(reg_param=0.04)\n",
+    "qda = QDA(reg_param=0.01)\n",
     "\n",
     "#Se entrena el modelo\n",
     "qda.fit(x_train_pca, y_train) #Datos escalados\n",
@@ -1020,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 544,
    "id": "0665fafa",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1030,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.646671826625387\n",
+      "Accuracy de testeo: 0.651702786377709\n",
       "Accuracy de validación: 0.6435185185185185\n"
      ]
     }
@@ -1064,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 545,
    "id": "b442182d",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy de testeo: 0.5154798761609907\n",
+      "Accuracy de testeo: 0.5208978328173375\n",
       "Accuracy de validación: 0.5185185185185185\n"
      ]
     }
@@ -1107,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 546,
    "id": "1edde50b",
    "metadata": {},
    "outputs": [
@@ -1190,10 +1192,10 @@
     "$$\n",
     "\\begin{array}{c c c c c}\n",
     "\\text{Modelo} & \\text{Sin PCA: Testeo} & \\text{Sin PCA: Validación} & \\text{Con PCA: Testeo} & \\text{Con PCA: Validación} &  \\Delta\\text{Testeo} & \\Delta\\text{Validación} \\\\\n",
-    "\\text{Regresión Logística} & 60.9\\% & 56.9\\% & 65.9\\% & 65.3\\% & +5\\% & +8.4\\% \\\\\n",
+    "\\text{Regresión Logística} & 67.8\\% & 62.5\\% & 71.4\\% & 67.4\\% & +3.6\\% & +4.9\\% \\\\\n",
     "\\text{LDA} & 62.1\\% & 66.0\\% & 66.5\\% & 65.0\\% & +4.4\\% & -1\\% \\\\\n",
-    "\\text{QDA} & 85.2\\% & 89.6\\% & 76.1\\% & 72.7\\% &  -9.1\\%  &  -16.9\\% \\\\\n",
-    "\\text{SVM} & 78.1\\% & 77.1\\% & 51.9\\% & 51.9\\% &  -26.2\\%  &  -25.2\\% \\\\\n",
+    "\\text{QDA} & 85.2\\% & 89.6\\% & 76.2\\% & 72.7\\% &  -9\\%  &  -16.9\\% \\\\\n",
+    "\\text{SVM} & 78.1\\% & 77.1\\% & 51.8\\% & 52.1\\% &  -26.3\\%  &  -25\\% \\\\\n",
     "\\text{KNN} & 67.5\\% & 67.1\\% & 64.9\\% & 64.1\\% &  -2.6\\%  &  -3\\% \\\\\n",
     "\\text{Árbol de decisión} & 72.8\\% & 69.0\\% & 65.1\\% & 68.3\\% & -7.7\\% & -0.7\\%\n",
     "\\end{array}\n",
