--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 7,
    "id": "74d4bdd4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 8,
    "id": "f873eb95",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 9,
    "id": "43060e44",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 10,
    "id": "d21b86f7",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2a4b5a68",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
     "        self.centroids = X[random_idx] #Se asignan los centroides iniciales como la muestra aleatoria\n",
     "\n",
     "        for i in range(self.max_iter):\n",
-    "            distances = self.distance(X,self.centroids) #Se calculan las distancias a los centroides\n",
+    "            distances = self.distance_centr(X) #Se calculan las distancias a los centroides\n",
     "            y= np.argmin(distances, axis= 0)  #Se etiqueta cada muestra con un cluster, según el centroide más cercano \n",
     "            new_centroids  = np.array([X[y == k].mean(axis=0) for k in range(self.n_clusters)]) #Se recalculan los K centroides, como la media de los datos pertenecientes al mismo cluster\n",
     "            \n",
@@ -207,8 +207,8 @@
     "\n",
     "        return self.centroids\n",
     "    \n",
-    "    # Se calculan las distancias\n",
-    "    def distance(self, x1,x2):\n",
+    "    # Calcula las distancias de las muestras X a los centroides asumiendo que son \n",
+    "    def distance_centr(self, X):\n",
     "        distances= []\n",
     "        for k in range(self.n_clusters):\n",
     "            dis = np.array([np.sqrt(np.sum((X[i,:]-self.centroids[k])**2)) for i in range(X.shape[0])])\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 12,
    "id": "ed0aaf7b",
    "metadata": {},
    "outputs": [
@@ -330,6 +330,18 @@
       "(3, 200)\n",
       "(3, 200)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49260666, 0.53391393],\n",
+       "       [0.09069741, 0.56182349],\n",
+       "       [0.88732296, 0.6255188 ]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
