--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 148,
    "id": "74d4bdd4",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 149,
    "id": "f873eb95",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 150,
    "id": "43060e44",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 151,
    "id": "d21b86f7",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 152,
    "id": "2a4b5a68",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 153,
    "id": "ed0aaf7b",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 154,
    "id": "38749db8",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 155,
    "id": "c28d4460",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "Text(0.5, 1.0, 'Fronteras de decisión - Modelo EM')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 156,
    "id": "e3c27157",
    "metadata": {},
    "outputs": [],
@@ -638,20 +638,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "b368118b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 2)\n",
+      "(200, 2)\n",
+      "(200, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "#Testing\n",
-    "\n",
     "model = PCA()\n",
     "\n",
     "model.fit(X)\n",
     "\n",
-    "x_tr = model.transform(X,k =2)\n",
+    "x_tr = model.transform(X,k =1)\n",
     "\n",
-    "x_tr2 = model.fit_transform(X,k=2)"
+    "x = model.inverse_transform(x_tr,k=1)\n",
+    "\n",
+    "x_tr2 = model.fit_transform(X,k=1)\n",
+    "\n",
+    "\n",
+    "print(x_tr.shape)\n",
+    "print(x.shape)\n",
+    "print(x_tr2.shape)"
    ]
   }
  ],
