fin del testing PCA - correccion

--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -669,6 +669,14 @@
     "print(x.shape)\n",
     "print(x_tr2.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9250b4d",
+   "metadata": {},
+   "source": [
+    "## Graficos "
+   ]
   }
  ],
  "metadata": {
